@@ -1,2 +1,10 @@
 # vam-package-manager
 Advanced package manager for Virt-a-Mate
+
+...... TODO
+
+## Launching in IDE
+
+You might have to add a following JVM argument when launching directly from IDE:
+
+`--add-opens=java.base/java.lang=ALL-UNNAMED --add-reads=com.vameli.vam.packagemanager.gui=ALL_UNNAMED`
